--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "CommonFeedback"
+ext.mainProject = "APPTest"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite,Application,Framework"
  */
-ext.developModule = "CommonFeedback"
+ext.developModule = "LibDeviceNetwork,LibDialog,LibCommonUtils"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -48,7 +48,7 @@ ext.moduleInfo = [
                 "version"                : "",
                 "artifactId"             : "",
                 "apidependenciesList"    : [
-                        "CommonPraise", "CommonFeedback", "CommonWebview", "CommonNetwork",
+                        "CommonPraise", "CommonFeedback", "CommonWebview", "CommonNetwork", "CommonPermission",
                         'com.squareup.okhttp3:okhttp:3.9.1',
                         'com.squareup.okhttp3:logging-interceptor:3.8.0',
                         'com.squareup.retrofit2:retrofit:2.4.0',
@@ -117,7 +117,7 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
                         "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification", "LibCustomView",
-                        "LibRecycleviewExt", "LibTouchRegion", "LibViewExt", "LibWebview"
+                        "LibRecycleviewExt", "LibTouchRegion", "LibViewExt", "LibWebview", "LibPermission"
                 ]
         ],
         "LibUtils"                  : [
@@ -414,6 +414,13 @@ ext.moduleInfo = [
                         "android.arch.lifecycle:common:${project.android_arch_lifecycle_version}",
                         "android.arch.lifecycle:runtime:${project.android_arch_lifecycle_version}",
                         "LibLog", "LibConfig", "LibAPK"
+                ]
+        ],
+        "LibPermission"            : [
+                "version"            : "3.3.5",
+                "artifactId"         : "lib-permission",
+                "apidependenciesList": [
+                        "LibDialog","LibAPK"
                 ]
         ]
 ]
