--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,7 +9,10 @@ def project = ext
 ext.mainProject = "CommonFeedback"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
+ * 当前设计到Android Support库的有：
+ *      LibDeviceNetwork,LibFile,LibViewExt,LibFragmentation_core,LibFlycoTabLayout,LibQRCode,LibAdapter,LibCustomView
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite,Application,Framework"
+ *
  */
 ext.developModule = "CommonFeedback"
 /**
@@ -27,7 +30,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "3.4.5"
+ext.moduleVersionName = "3.4.6"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -60,17 +63,17 @@ ext.moduleInfo = [
                         ]
                 ]
         ],
-        "CommonNetwork"            : [
-                "version"            : "3.4.5",
+        "CommonNetwork"             : [
+                "version"            : "3.4.6",
                 "artifactId"         : "common-network",
                 "apidependenciesList": [
                         "Framework"
                 ]
         ],
-        "CommonWebview"            : [
-                "version"            : "3.4.5",
-                "artifactId"         : "common-webview",
-                "apidependenciesList": [
+        "CommonWebview"             : [
+                "version"                : "3.4.6",
+                "artifactId"             : "common-webview",
+                "apidependenciesList"    : [
                         "Framework"
                 ],
                 "specialdependenciesList": [
@@ -80,9 +83,9 @@ ext.moduleInfo = [
                 ]
         ],
         "CommonFeedback"            : [
-                "version"            : "3.4.5",
-                "artifactId"         : "common-feedback",
-                "apidependenciesList": [
+                "version"                : "3.4.6",
+                "artifactId"             : "common-feedback",
+                "apidependenciesList"    : [
                         "CommonWebview"
                 ],
                 "specialdependenciesList": [
@@ -92,14 +95,14 @@ ext.moduleInfo = [
                 ]
         ],
         "CommonPraise"              : [
-                "version"            : "3.4.5",
+                "version"            : "3.4.6",
                 "artifactId"         : "common-praise",
                 "apidependenciesList": [
                         "Framework"
                 ]
         ],
         "Framework"                 : [
-                "version"            : "3.4.5",
+                "version"            : "3.4.6",
                 "artifactId"         : "framework",
                 "apidependenciesList": [
                         "com.android.support:multidex:1.0.0",
@@ -107,12 +110,12 @@ ext.moduleInfo = [
                 ]
         ],
         "LibWrapper"                : [
-                "version"            : "3.4.5",
+                "version"            : "3.4.6",
                 "artifactId"         : "lib-wrapper",
                 "apidependenciesList": ["LibUtils", "LibUIUtils"]
         ],
         "LibUIUtils"                : [
-                "version"            : "3.4.3",
+                "version"            : "3.4.6",
                 "artifactId"         : "lib-uiutils",
                 "apidependenciesList": [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
@@ -121,7 +124,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibUtils"                  : [
-                "version"            : "3.4.5",
+                "version"            : "3.4.6",
                 "artifactId"         : "lib-utils",
                 "apidependenciesList": [
                         "Router", "RouterAnnotation", "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
@@ -276,12 +279,12 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibAndroid"]
         ],
         "LibSuperAPP"               : [
-                "version"            : "3.4.1",
+                "version"            : "3.4.6",
                 "artifactId"         : "lib-super-app",
                 "apidependenciesList": ["LibDialog", "LibAPK"]
         ],
         "LibDebug"                  : [
-                "version"            : "3.4.1",
+                "version"            : "3.4.6",
                 "artifactId"         : "lib-debug",
                 "apidependenciesList": ["LibDialog", "LibToast"]
         ],
@@ -351,23 +354,28 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibThread"]
         ],
         "LibImage"                  : [
-                "version"            : "2.7.1",
-                "artifactId"         : "lib-image",
-                "apidependenciesList": [
+                "version"                : "3.4.6",
+                "artifactId"             : "lib-image",
+                "apidependenciesList"    : [
                         "com.github.bumptech.glide:glide:${project.glide_version}",
                         "com.github.bumptech.glide:okhttp3-integration:${project.glide_version}",
-                        "LibLog"
+                        "LibLog","LibOS"
+                ],
+                "specialdependenciesList": [
+                        "kapt": [
+                                "com.github.bumptech.glide:compiler:${project.glide_version}"
+                        ]
                 ]
         ],
         "LibDialog"                 : [
-                "version"            : "3.4.1",
+                "version"            : "3.4.6",
                 "artifactId"         : "lib-dialog",
                 "apidependenciesList": [
                         "com.android.support.constraint:constraint-layout:${project.android_constraint_layout_version}",
                         "LibThread", "LibImage", "LibOS", "LibCommonUIUtils"]
         ],
         "LibNotification"           : [
-                "version"            : "3.4.1",
+                "version"            : "3.4.6",
                 "artifactId"         : "lib-notification",
                 "apidependenciesList": ["LibDialog", "LibAPK", "LibCommonUtils"]
         ],
@@ -416,11 +424,11 @@ ext.moduleInfo = [
                         "LibLog", "LibConfig", "LibAPK"
                 ]
         ],
-        "LibPermission"            : [
-                "version"            : "3.4.3",
+        "LibPermission"             : [
+                "version"            : "3.4.6",
                 "artifactId"         : "lib-permission",
                 "apidependenciesList": [
-                        "LibDialog","LibAPK"
+                        "LibDialog", "LibAPK"
                 ]
         ]
 ]
