--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,15 +6,15 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "CommonNetwork"
+ext.mainProject = "APPTest"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前设计到Android Support库的有：
- *      LibDeviceNetwork,LibFile,LibViewExt,LibFragmentation_core,LibFlycoTabLayout,LibQRCode,LibAdapter,LibCustomView
+ *      LibDeviceNetwork,LibFile,LibViewExt,LibFragmentation_core,LibFlycoTabLayout,LibQRCode,LibAdapter,LibCustomView,LibImmersive
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework"
  *
  */
-ext.developModule = "CommonNetwork"
+ext.developModule = "LibDialog,LibDeviceNetwork,LibCommonUtils"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -30,7 +30,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "3.5.0"
+ext.moduleVersionName = "3.6.0"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -120,7 +120,7 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
                         "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification", "LibCustomView",
-                        "LibRecycleviewExt", "LibTouchRegion", "LibViewExt", "LibWebview", "LibPermission"
+                        "LibRecycleviewExt", "LibTouchRegion", "LibViewExt", "LibWebview", "LibPermission","LibImmersive"
                 ]
         ],
         "LibUtils"                  : [
@@ -436,7 +436,17 @@ ext.moduleInfo = [
                 "artifactId"         : "lib-aaf-tools",
                 "apidependenciesList": [
                 ]
+        ],
+        "LibImmersive"             : [
+                "version"            : "3.5.0",
+                "artifactId"         : "lib-immersive",
+                "apidependenciesList": [
+                        "LibDeviceNetwork",
+                        "com.android.support:appcompat-v7:${project.android_support_version}"
+                ]
         ]
 ]
+
+
 
 
