--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -14,7 +14,7 @@ ext.mainProject = "CommonFeedback"
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework"
  *
  */
-ext.developModule = "CommonFeedback"
+ext.developModule = "LibImage"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -30,7 +30,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "3.6.4"
+ext.moduleVersionName = "3.6.5"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
