--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibSuperAPP"
+ext.mainProject = "LibNotification"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前设计到Android Support库的有：
@@ -14,7 +14,7 @@ ext.mainProject = "LibSuperAPP"
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework"
  *
  */
-ext.developModule = "LibSuperAPP"
+ext.developModule = "LibNotification"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -375,7 +375,7 @@ ext.moduleInfo = [
                         "LibThread", "LibImage", "LibOS", "LibCommonUIUtils"]
         ],
         "LibNotification"           : [
-                "version"            : "3.6.8",
+                "version"            : "3.6.9",
                 "artifactId"         : "lib-notification",
                 "apidependenciesList": ["LibDialog", "LibAPK", "LibCommonUtils"]
         ],
